--- a/Flex-Boxs/style.css
+++ b/Flex-Boxs/style.css
@@ -4,10 +4,10 @@ body {
     border: 10px solid black;
     /* justify-content: center; */
     /* justify-content: flex-start; */
-    /* flex-direction: column;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly; */
-    gap: 20px;
+    justify-content: space-between;
+    /* gap: 20px; */
     /* row-gap: 20px;
     column-gap: 10px; */
     /* flex-wrap: wrap;
@@ -19,7 +19,7 @@ body {
 
 
 .box {
-    flex-shrink: 1;
+    /* flex-shrink: 1; */
     width: 150px;
     height: 150px;  
     background-color: red;
