--- a/Glowing Navbar v1/style.css
+++ b/Glowing Navbar v1/style.css
@@ -15,8 +15,6 @@ body {
 }
 
 .logo {
-  display: flex;
-  justify-content: flex-start;
   color: #fff;
   font-size: 18px;
   font-weight: bold;
@@ -48,8 +46,8 @@ body {
   position: absolute;
   top: -2px;
   left: -2px;
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
   background: linear-gradient(
     45deg,
     #FF0000, #FF7300, #FFFB00, #48FF00,
@@ -100,6 +98,7 @@ body {
   color: #fff;
   text-decoration: none;
   font-size: 18px;
+  font-weight: bold;
   border-radius: 10px;
   z-index: 0;
 }
